--- a/formato_ieee.tex
+++ b/formato_ieee.tex
@@ -25,11 +25,14 @@
 \begin{document}
 
 \title{Proyecto de Investigación de cotizador automático por medio de ChatBots}
-\author{
+\author
+{
 \IEEEauthorblockN{D.~Figueroa-Castañeda}\\
-\IEEEauthorblockA{Universidad Interamericana~ Maestría en Automatizac,\\
-Puebla,~Mexico \\
-Email: \{david\_d.figueroa@lainter.edu.mx}
+\IEEEauthorblockA
+{
+	Universidad Interamericana~ Maestría en automatización industrial, \\manufactura 		digital, y robótica\\
+	Puebla,~Mexico \\
+	email: \{d.figueroa@lainter.edu.mx}
 }
 
 
@@ -44,10 +47,10 @@ Email: \{david\_d.figueroa@lainter.edu.mx}
 
  
 \begin{abstract}
- In this paper, ... Finally, a simulation ... is shown.
+ ~En ésta investigación se abordará la integración de programas con capacidad de interactuar por medio de texto con usuarios humanos, conocidos como ChatBot's, para la automatización del proceso de cotización de productos y servicios a través de Internet, en específico, del servicio de Impresión 3D y manufactura aditiva. A través de la creación de un ChatBot para interacuar en Telegram y Facebook desarrollado en Node-RED, una plataforma de programación visual que permite integrar diferentes servicios WEB a través de API's y control de Hardware facilmente, permitiendo administrar también el flujo de trabajo de una granja de impresoras 3D.
 \end{abstract}
 \vspace{0.5cm}
-\textbf{Keywords}:  Homotopy continuation methods, Path Planning, Mobile  robot, ROS.
+\textbf{Keywords}:  ChatBot, Node-RED, Cotizador automático, Impresión 3D.
 
 \IEEEpeerreviewmaketitle
 \section{Introduccion}
