--- a/formato_ieee.tex
+++ b/formato_ieee.tex
@@ -54,16 +54,19 @@
 
 \IEEEpeerreviewmaketitle
 \section{Introduccion}
-\IEEEPARstart{I}n recent decades,... This paper is organized as follows. In Section $\mathbf{II}$, ... In Section $\mathbf{IV}$... Some simulations in Section $\mathbf{VI}$. Finally, the conclusions are presented in Section $\mathbf{VII}$.
+\IEEEPARstart{A}ctualmente es muy común encontrar procesos donde un programa puede facilmente solventar tareas repetitivas, desde sujetar una pieza y depositarla en un lugar en específico dentro de una linea de producción, hasta contestar el teléfono y agendar una cita como se ha visto en algunos desarrollos de empresas como Google. La situacción actual de confinamiento hace necesario una mayor demanda de servicios a través de internet, exigiendo a muchas empresas a innovar en soluciones que les permita continuar prestando servicios, presindiendo de la fuerza laboral presencial y dando paso a formas de trabajo remoto y en el mejor de los casos más automatizado. Esta investigación se encuentra organizada de la siguiente manera. En la Sección $\mathbf{II}$, se hablará del proceso de impresión 3D y la necesidad de integrar un ChatBot que realice cotizaciones, en la Sección $\mathbf{III}$ se abordará el uso de Node-RED para desarrollar el algoritmo de cotización de la impresión 3D, así como el ChatBot. En la Sección $\mathbf{IV}$ se introduce, la Raspberry Pi 4, como la plataforma donde correrá nuestro programa. Finalmente, las conclusiones son presentadas en la Sección $\mathbf{V}$.
 
-\section{Homotopic Continuation Method}
+\section{Impresión 3D}
 
-Homotopy continuation method..
+La impresión 3D es un proceso de manufactura aditiva donde se debe considerar el material usado en el proceso, el tiempo necesario para la fabricación así como el volumen final y peso. Adicionalmente es necesaro considerar la energía eléctrica necesaria, material de soportes y un factor de complejidad, con esos parametros, se puede realizar una cotización más adecuada y justa con el cliente final.
 
 \begin{equation}
 \label{ohm}
-V=I*R:\quad\mathbb{R}^{n}\longrightarrow\mathbb{R}^{n},
+P=T*F*V*E,
 \end{equation}
+
+Donde:
+P = Precio
 
 The system:  
  \begin{equation}
@@ -72,22 +75,32 @@ The system:
  \end{equation}
  
  \begin{figure}
- 	\includegraphics[scale=1]{imagenes/img1.eps}
- 	\caption{Imagen de prueba}
+ 	\includegraphics[scale=0.5]{imagenes/img1.eps}
+ 	\caption{ChatBot contestando cotización en Telegram}
  	\label{fig:img1}
  \end{figure}
      
      
      
  where,   $\lambda$ is the homotopy parameter,  $x_0$  is the starting point, $H( x,\lambda) :\mathbb{R}^{n+1}\longrightarrow \mathbb{R}^{n} \text{,} \quad{x} \in\mathbb{R}^{n}$. 
-\section{Obstacles}
-HPPM uses the...%-----------------------------------------------------------------------------------------------------------
+\section{Node-RED}
+Existen diferentes paradigmas de programación, uno de los que más terreno ha ganado en estos días ha sido JavaSript por su fácil integración con ambientes web. Tomando como base ese lenguaje se dasarrolló un proyecto denominado Node.JS, donde, se simplifica el modo de programación, generando entornos web, con la posibilidad de comunicarse a través de mensajes o acciones. Por otro lado, han ganado terreno, formas de organizar programas de forma visual, siendo Node-RED, un entorno que junta de manera visual, gran cantidad de librerias, 
 
-\section{Spherical}
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=0.2\textwidth]{imagenes/node.eps} 
+\caption{ Nodos y Flujos en Node-RED.}
+\label{fig:hiper2}
+\end{center}
+\end{figure}    
+
+%-----------------------------------------------------------------------------------------------------------
+
+\section{Node-RED}
  \begin{figure}[H]
 \begin{center}
-\includegraphics[width=0.2\textwidth]{imagenes/hiper2.eps} 
-\caption{ Seguimiento.}
+\includegraphics[width=0.2\textwidth]{imagenes/node.eps} 
+\caption{ Nodos y Flujos en Node-RED.}
 \label{fig:hiper2}
 \end{center}
 \end{figure}    
