Agregué una nueva referencia para una cita
Y una fórmula citada para el cálculo de las impresiones

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -56,3 +56,13 @@ keywords={carrier transmission on power lines;protocols;telecommunication networ
 doi={10.1109/ISPLC.2008.4510415},
 ISSN={},
 month={April},}
+
+@article{jimenez2013fabricacion,
+  title={La fabricaci{\'o}n aditiva. La evidencia de una necesidad},
+  author={Jim{\'e}nez, M and Porras, J and Rodr{\'\i}guez, IA and Espinosa, MM},
+  journal={Interempresas Industria Metalmecanica},
+  volume={235},
+  number={1047},
+  pages={74--82},
+  year={2013}
+}
