--- a/formato_ieee.tex
+++ b/formato_ieee.tex
@@ -47,7 +47,7 @@
 
  
 \begin{abstract}
- ~En ésta investigación se abordará la integración de programas con capacidad de interactuar por medio de texto con usuarios humanos, conocidos como ChatBot's, para la automatización del proceso de cotización de productos y servicios a través de Internet, en específico, del servicio de Impresión 3D y manufactura aditiva. A través de la creación de un ChatBot para interacuar en Telegram y Facebook desarrollado en Node-RED, una plataforma de programación visual que permite integrar diferentes servicios WEB a través de API's y control de Hardware facilmente, permitiendo administrar también el flujo de trabajo de una granja de impresoras 3D.
+ ~En ésta investigación se abordará la integración de programas con capacidad de interactuar por medio de texto con usuarios humanos, conocidos como ChatBot's, para la automatización del proceso de cotización de productos y servicios a través de Internet, en específico, del servicio de Impresión 3D y manufactura aditiva. A través de Telegram y Facebook usando Node-RED, que es una plataforma de programación visual que permite integrar diferentes servicios WEB a través de API's y control de Hardware facilmente, permitiendo administrar también el flujo de trabajo de una granja de impresoras 3D.
 \end{abstract}
 \vspace{0.5cm}
 \textbf{Keywords}:  ChatBot, Node-RED, Cotizador automático, Impresión 3D.
@@ -58,22 +58,23 @@
 
 \section{Impresión 3D}
 
-La impresión 3D es un proceso de manufactura aditiva donde se debe considerar el material usado en el proceso, el tiempo necesario para la fabricación así como el volumen final y peso. Adicionalmente es necesaro considerar la energía eléctrica necesaria, material de soportes y un factor de complejidad, con esos parametros, se puede realizar una cotización más adecuada y justa con el cliente final.
+La impresión 3D es un proceso de manufactura aditiva, es decir consiste en ir agregando capas de material una sobre otra hasta formar un objeto con volumen, para poder calcular el costo de manufactura del prototipo se debe considerar el material usado en el proceso, el costo de producción que considera la depreciación de la máquina, el procesado del modelo 3D, en ese punto se puede considerar un factor de complejidad y con esos parametros, se puede realizar una cotización más adecuada y justa con el cliente final \cite{jimenez2013fabricacion}.
 
 \begin{equation}
 \label{ohm}
-P=T*F*V*E,
+C_p = C_e + C_m + C_t + C_a
 \end{equation}
 
 Donde:\\
+~\\
+C= Costo total del prototipo.\\
+e = Costo de producción (datos de depreciación de la máquina).\\
+m = Costo del material.\\
+t = Costo del procesado del modelo 3D y mano de obra.\\
+a = Costo de acabado y postprocesado.\\
 
-P = Precio total al cliente.\\
-T = Tiempo necesario.\\
-F = Factor de complejidad.\\
-V = Volumen para empaquetar.\\
-E = Energía necesaria.\\
 
-El Factor de complejidad:  
+Adicionalmente se va a considerar un Factor de complejidad:  
  \begin{equation}
     \label{Homotopia_G}
      F= Resolucion / Area * Altura,
